--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,6 +3,11 @@
     <ul>
       <li><a routerLink="/">Dashboard</a></li>
       <li><a routerLink="/user">Users</a></li>
+      <li><a routerLink="/livestock">Livestock</a></li>
+      <li><a routerLink="/health-record">Health Record</a></li>
+      <li><a routerLink="/treatment">Treatment</a></li>
+      <li><a routerLink="/vaccination">Vaccination</a></li>
+      <li><a routerLink="/schedule">Schedule</a></li>
     </ul>
   </nav>
   <div>
