--- a/src/app/user/user-list/user-list.html
+++ b/src/app/user/user-list/user-list.html
@@ -21,7 +21,7 @@
         <td>{{ user.username }}</td>
         <td>{{ user.email }}</td>
         <td>{{ user.mobileNumber }}</td>
-        <td>{{ user.address }}</td>
+        <td>{{ user.address.city }}, {{ user.address.barangay }}</td>
         <td>{{ user.gender }}</td>
         <td>{{ user.role }}</td>
         <td>
