--- a/src/app/user/user-details/user-details.html
+++ b/src/app/user/user-details/user-details.html
@@ -1,1 +1,17 @@
-<p>user-details works!</p>
+<div>
+  <h2>User Details</h2>
+  @if (user) {
+    <button (click)="onUpdate()">Update</button>
+    <p><strong>Username:</strong> {{ user.username }}</p>
+    <p><strong>Email:</strong> {{ user.email }}</p>
+    <p><strong>Mobile Number:</strong> {{ user.mobileNumber }}</p>
+    <p><strong>Gender:</strong> {{ user.gender }}</p>
+    <p><strong>Role:</strong> {{ user.role }}</p>
+
+    <h3>Address</h3>
+    <p><strong>City:</strong> {{ user.address.city }}</p>
+    <p><strong>Barangay:</strong> {{ user.address.barangay }}</p>
+  } @else {
+    <p>Fetching user...</p>
+  }
+</div>
