add livestock categories and classification boilerplate

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,6 +3,8 @@
     <ul>
       <li><a [routerLink]="isLoading ? null : `/dashboard/${user?.role}`">Dashboard</a></li>
       <li><a [routerLink]="isLoading ? null : '/user'">Users</a></li>
+      <li>Livestock Categories</li>
+      <li>Livestock Classification</li>
       <li><a [routerLink]="isLoading ? null : '/livestock'">Livestock</a></li>
       <li><a [routerLink]="isLoading ? null : '/health-record'">Health Record</a></li>
       <li><a [routerLink]="isLoading ? null : '/treatment'">Treatment</a></li>
