--- a/src/app/livestock/livestock-create/livestock-create.html
+++ b/src/app/livestock/livestock-create/livestock-create.html
@@ -1,1 +1,5 @@
-<p>livestock-create works!</p>
+<app-livestock-form
+  [isLoading]="isLoading"
+  [initDoc]="initDoc"
+  (onSubmitEvent)="onSubmit($event)">
+</app-livestock-form>
