--- a/src/app/user/user-list/user-list.html
+++ b/src/app/user/user-list/user-list.html
@@ -23,7 +23,7 @@
       <!-- Email -->
       <ng-container matColumnDef="email">
         <th mat-header-cell *matHeaderCellDef> Email </th>
-        <td mat-cell *matCellDef="let user"> {{ user.email }} </td>
+        <td mat-cell *matCellDef="let user"> {{ user.emailAddress }} </td>
       </ng-container>
 
       <!-- Mobile Number -->
